--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "finpal",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,19 +11,11 @@
   "dependencies": {
     "expo": "~52.0.25",
     "expo-status-bar": "~2.0.1",
-    "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "expo-router": "~4.0.16",
-    "react-native-screens": "~4.4.0",
-    "expo-linking": "~7.0.4",
-    "expo-constants": "~17.0.4"
+    "react-native": "0.76.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.4.17"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
